# ditm-openadr-bl

./: .dockerignore  .gitignore  Dockerfile  README.md  function_app.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/: __init__.py  config.py  logger.py  main.py
src/application/: generate_events.py
src/infrastructure/: prediction_actions_impl.py  predictions_actions_stub_impl.py
src/infrastructure/_auth/: token_manager.py
src/infrastructure/_auth/http/: authenticated_session.py
src/infrastructure/azureml/: feature_generation.py  predictions.py
src/infrastructure/influxdb/: _client.py  prediction_retrieval.py  trafo_load_audit.py
src/infrastructure/influxdb/dalidata/: query_dali_data.py
src/infrastructure/influxdb/standard_profiles/: query_standard_profiles.py
src/infrastructure/weather_data/: weather_forecast.py
src/models/: predicted_load.py
